Closed Bug 881518 Opened 11 years ago Closed 11 years ago

PJS: Fix UnsafeSetElement inlining for typed arrays

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24

People

(Reporter: shu, Assigned: shu)

Details

Attachments

(1 file)

Broken since rm analyzeTypes.
Attached patch fixSplinter Review
Assignee: general → shu
Attachment #760620 - Flags: review?(nmatsakis)
Attachment #760620 - Flags: review?(nmatsakis) → review+
https://hg.mozilla.org/mozilla-central/rev/e83053c14672
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: