Bug 881518 - Fix UnsafeSetElement inlining for typed arrays. (r=nmatsakis)